@@ -447,7 +447,7 @@ int	flags;
 	 */
 	if (!getconfs("sort_command", sb))
 		die("cannot get sort command name.");
-#ifdef _WIN32
+#if defined(_WIN32) || defined(__DJGPP__)
 	if (!locatestring(strbuf_value(sb), ".exe", MATCH_LAST))
 		strbuf_puts(sb, ".exe");
 #endif
@@ -455,7 +455,7 @@ int	flags;
 	strbuf_reset(sb);
 	if (!getconfs("sed_command", sb))
 		die("cannot get sed command name.");
-#ifdef _WIN32
+#if defined(_WIN32) || defined(__DJGPP__)
 	if (!locatestring(strbuf_value(sb), ".exe", MATCH_LAST))
 		strbuf_puts(sb, ".exe");
 #endif
